--- a/base.html
+++ b/base.html
@@ -15,27 +15,35 @@
         <div class="card">
             <div class="img-card"></div>
               <h6>Laptop Gamer AMD</h6>
-              <p>Precio base: $<span class="precio-inicial"></span> </p>
+                <p>
+                    Precio base: $
+                    <span class="precio-inicial"><span>
+                </p>
         
-              <p>Cantidad:
-                <span class="cantidad">0</span>
-                <button 
-                >+</button>
-                <button
-                >-</button>
+              <p>
+                Cantidad:
+                <span class="cantidad"></span>
+                <button onclick="
+                cantidad = cantidad + 1;
+                cantidadSpan.innerHTML = cantidad;
+                totalSpan.innerHTML = cantidad * precio;
+                ">+</button>
+                <button onclick="
+                cantidad = cantidad - 1;
+                cantidadSpan.innerHTML = cantidad;
+                totalSpan.innerHTML = cantidad * precio;
+                ">-</button>
               </p>
-            </div>
-
         </div>
     </section>
 
     <div class="total-section">
-        <p>Total a pagar: $<span class="valor-total"></span> </p>
+        <p>
+            Total a pagar: $
+            <span class="valor-total"></span>
+        </p>
     </div>
 
-    <script src="index.js">
-      
-
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
